azure/k8s/test-environment/deploy-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${PR_NUMBER}-${CIRCLE_PROJECT_REPONAME}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-gz-web
  namespace: ${PR_NUMBER}-${CIRCLE_PROJECT_REPONAME}
  labels:
    app: gz-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gz-web
  template:
    metadata:
      labels:
        app: gz-web
    spec:
      containers:
      - name: django-backend
        image: geekzone/backend:${TAG}
        resources:
          limits:
            memory: "100Mi"
            cpu: 50m
          requests:
            memory: "50Mi"
            cpu: 30m
      - name: frontend-proxy
        image: geekzone/frontend:${TAG}
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          limits:
            memory: "50Mi"
            cpu: 50m
          requests:
            memory: "30Mi"
            cpu: 30m

---
apiVersion: v1
kind: Service
metadata:
  name: test-gz-web
  namespace: ${PR_NUMBER}-${CIRCLE_PROJECT_REPONAME}
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ${PR_NUMBER}-${CIRCLE_PROJECT_REPONAME}-test.geek.zone
#    external-dns.alpha.kubernetes.io/ttl: "120" #optional
spec:
  type: ClusterIP
  selector:
    app: gz-web
  ports:
  - port: 80
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gz-web
  namespace: ${PR_NUMBER}-${CIRCLE_PROJECT_REPONAME}
  annotations:
    nginx.ingress.kubernetes.io/app-root: /memberships/register 
spec:
  tls:
  - hosts:
    - "${PR_NUMBER}-${CIRCLE_PROJECT_REPONAME}-test.geek.zone"
  rules: 
  - host: ${PR_NUMBER}-${CIRCLE_PROJECT_REPONAME}-test.geek.zone
    http:
      paths:
      - path: /
        pathType: Prefix          
        backend:
          service:
            name: test-gz-web  
            port: 
              number: 80
  ingressClassName: nginx

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: ${PR_NUMBER}-${CIRCLE_PROJECT_REPONAME}
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      name: postgres
  template:
    metadata:
      labels:
       name: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql
          resources:
            limits:
              memory: "50Mi"
              cpu: 50m
            requests:
              memory: "30Mi"
              cpu: 30m
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ${PR_NUMBER}-${CIRCLE_PROJECT_REPONAME}
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    name: postgres
